# cashflow

./: COPYING  README.md  main.py  main.ui  migrate.py  models.py  pyproject.toml  views.py
src/: main.py  models.py  settings.py
templates/: balance.html  datatable.html  index.html
