[tool.poetry]
name = "cashflow"
version = "0.1.0"
description = ""
authors = ["Remco Kranenburg <remco@burgsoft.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
sqlalchemy = "^1.3.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
